--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.2</version>
+		<version>2.7.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.allstate</groupId>
-	<artifactId>claims-server</artifactId>
+	<artifactId>small-claims</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>claims-server</name>
-	<description>Demo project for Spring Boot</description>
+	<name>small-claims</name>
+	<description>Spring Boot application for Small Claims application</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -41,6 +41,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>5.7.3</version>
 		</dependency>
 	</dependencies>
 
